# ekki

./: .gitignore  Cargo.toml  ekki_config.toml
ffi-tests/: Makefile  dummy_renderer.c  dummy_renderer.h
src/: base.rs  camera.rs  config.rs  custom_renderer.rs  grid.rs  grid.wgsl  input.rs  main.rs  window.rs
src/math/: color.rs  matrix.rs  mod.rs  point.rs  quaternion.rs  vector.rs
src/plugins/: mod.rs
src/scene/: mod.rs
src/ui/: console.rs  mod.rs
src/ui/windows/: mod.rs  node_map.rs  render.rs  scene_viewer_3d.rs  startup.rs
